--- a/app/src/main/res/menu/activity_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_drawer.xml
@@ -8,14 +8,11 @@
             android:id="@+id/nav_contacts"
             android:icon="@android:drawable/ic_menu_myplaces"
             android:iconTint="@color/black"
-            android:title="@string/menu_contacts" />
+            android:title="@string/menu_events" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_recycler" />
-        <item
-            android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_profile" />
+            android:title="@string/menu_news" />
+
     </group>
 </menu>
