--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,14 @@
 
     <fragment
         android:id="@+id/nav_contacts"
-        android:name="cat.urv.comm.padm.ui.home.ContactsFragment"
-        android:label="@string/menu_contacts"
-        tools:layout="@layout/fragment_contacts" />
+        android:name="cat.urv.deim.padm.comm.ui.news.NewsFragment"
+        android:label="@string/menu_news"
+        tools:layout="@layout/fragment_news_recycler" />
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="cat.urv.comm.padm.ui.gallery.GalleryFragment"
-        android:label="@string/menu_recycler"
-        tools:layout="@layout/fragment_contacts_recycler" />
+        android:name="cat.urv.deim.padm.comm.ui.events.EventsFragment"
+        android:label="@string/menu_events"
+        tools:layout="@layout/fragment_events_recycler" />
 
-    <fragment
-        android:id="@+id/nav_profile"
-        android:name="cat.urv.comm.padm.ui.slideshow.ProfileFragment"
-        android:label="@string/menu_profile"
-        tools:layout="@layout/fragment_profile" />
 </navigation>
