--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_contacts">
+    app:startDestination="@+id/nav_events">
 
     <fragment
-        android:id="@+id/nav_contacts"
+        android:id="@+id/nav_events"
         android:name="cat.urv.deim.padm.comm.ui.news.NewsFragment"
         android:label="@string/menu_news"
         tools:layout="@layout/fragment_news_recycler" />
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_news"
         android:name="cat.urv.deim.padm.comm.ui.events.EventsFragment"
         android:label="@string/menu_events"
         tools:layout="@layout/fragment_events_recycler" />
