--- a/app/src/main/res/layout/fragment_news_recycler.xml
+++ b/app/src/main/res/layout/fragment_news_recycler.xml
@@ -23,5 +23,5 @@
         android:id="@+id/resultat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="News" />
 </androidx.constraintlayout.widget.ConstraintLayout>
