--- a/app/src/main/res/menu/activity_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_drawer.xml
@@ -5,12 +5,12 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_contacts"
+            android:id="@+id/nav_events"
             android:icon="@android:drawable/ic_menu_myplaces"
             android:iconTint="@color/black"
             android:title="@string/menu_events" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_news"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_news" />
 
