--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -18,28 +18,41 @@
             android:layout_width="128dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/date"
             android:layout_width="123dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textStyle="italic" />
 
         <Button
             android:id="@+id/btnOpenNews"
-            android:layout_width="120dp"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:text="Open" />
     </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="14dp" />
 
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="14dp" />
 
 </LinearLayout>
 
