--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -9,25 +9,37 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="20dp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/eventImageURL"
             android:layout_width="match_parent"
-            android:layout_height="229dp"
+            android:layout_height="296dp"
             app:srcCompat="@drawable/ic_launcher_foreground" />
 
         <TextView
             android:id="@+id/eventName"
             android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:text="TextView" />
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textSize="34sp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="28dp" />
 
         <TextView
             android:id="@+id/eventType"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textSize="20sp"
+            android:textStyle="italic" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="28dp" />
 
         <TextView
             android:id="@+id/eventDescription"
@@ -35,17 +47,27 @@
             android:layout_height="47dp"
             android:text="TextView" />
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="28dp" />
+
         <TextView
             android:id="@+id/eventWebURL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="#3F51B5" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="28dp" />
 
         <TextView
             android:id="@+id/eventTags"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textStyle="bold" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
