--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -33,9 +33,9 @@
 
         <Button
             android:id="@+id/btnOpenNews"
-            android:layout_width="50dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
+            android:layout_margin="20dp"
             android:layout_weight="1"
             android:text="Open" />
     </LinearLayout>
