--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -24,7 +24,7 @@
 
         <TextView
             android:id="@+id/date"
-            android:layout_width="123dp"
+            android:layout_width="101dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:text="TextView"
@@ -37,7 +37,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:layout_weight="1"
-            android:text="Open" />
+            android:text="Open"
+            android:textSize="10sp" />
     </LinearLayout>
 
     <Space
